--- a/discourse/pyproject.toml
+++ b/discourse/pyproject.toml
@@ -11,9 +11,10 @@ python-dotenv = "^0.20.0"
 pandas = "^1.4.3"
 SQLAlchemy = "^1.4.40"
 psycopg2-binary = "^2.9.3"
+apache-airflow = "^2.3.4"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^7.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
